--- a/Lessons/Lesson04/style.css
+++ b/Lessons/Lesson04/style.css
@@ -1,3 +1,11 @@
+.top-right {
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+img {
+	border: 2px solid #000; /* Черная рамка толщиной 2 пикселя */
+}
 h1	{
 text-align:center;
 color: rgb(30,30,140);
